# -

./: README.md
KP/: CMakeLists.txt  KP_report.docx  README.md  a.c  b.c  c.c
Labs1/: README.md  report.docx
Labs2/: Osi2.docx  README.MD  README.md  main.cpp  readme.md
Labs3/: CMakeLists.txt  Osi3.docx  README.md  main.c
Labs4/: Osi4.docx  README.md  main.cpp
Labs5/: CMakeLists.txt  Osi5.docx  README.md  first.cpp  lib1.cpp  lib2.cpp  second.cpp
Labs6-8/: CMakeLists.txt  Osi6-8.docx  README.md
